scripts/envoy/envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager"
                generate_request_id: true
                tracing: {}
                stat_prefix: ingress
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: default
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: outbound|8080||ingress-sidecar.ingress-sidecar
                http_filters:
                  - name: envoy.health_check
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      headers:
                        - name: ":path"
                          prefix_match: "/_health"
                      pass_through_mode: false
                  - name: ingress_sidecar
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: dofile("/etc/envoy/sidecar.lua")
                  - name: rewrite
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                      inline_code: |
                        function envoy_on_request(request_handle)
                          if request_handle:headers():get(":path"):find("^/response%-headers") then
                            return
                          end
                          request_handle:headers():replace(":path", "/headers?show_env=1")
                          request_handle:headers():replace(":method", "GET")
                        end

                        function envoy_on_response(response_handle)
                        end
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: "outbound|8080||ingress-sidecar.ingress-sidecar"
      connect_timeout: 0.25s
      type: STRICT_DNS
      load_assignment:
        cluster_name: "outbound|8080||ingress-sidecar.ingress-sidecar"
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: sidecar
                  port_value: 8080
    - name: datadog_agent
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: round_robin
      load_assignment:
        cluster_name: datadog_agent
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: datadog_agent
                  port_value: 8126

tracing:
  http:
    name: envoy.tracers.datadog
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v3.DatadogConfig
      collector_cluster: datadog_agent   # matched against the named cluster
      service_name: ingress-sidecar      # user-defined service name
